--- a/CycleSales/CycleSales/packages.config
+++ b/CycleSales/CycleSales/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="EntityFramework" version="7.0.0-beta1-10961" targetFramework="net451" />
   <package id="EntityFramework.AzureTableStorage" version="7.0.0-beta1-10961" targetFramework="net451" />
+  <package id="EntityFramework.Commands" version="7.0.0-beta1-10961" targetFramework="net451" />
   <package id="EntityFramework.InMemory" version="7.0.0-beta1-10961" targetFramework="net451" />
   <package id="EntityFramework.Migrations" version="7.0.0-beta1-10961" targetFramework="net451" />
   <package id="EntityFramework.Relational" version="7.0.0-beta1-10961" targetFramework="net451" />
