--- a/CycleSales/CycleSales.Tests/CycleSales.Tests.csproj
+++ b/CycleSales/CycleSales.Tests/CycleSales.Tests.csproj
@@ -39,6 +39,10 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\EntityFramework.7.0.0-beta1-10961\lib\net45\EntityFramework.dll</HintPath>
     </Reference>
+    <Reference Include="EntityFramework.InMemory, Version=7.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\EntityFramework.InMemory.7.0.0-beta1-10961\lib\net45\EntityFramework.InMemory.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.Framework.ConfigurationModel, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Microsoft.Framework.ConfigurationModel.1.0.0-beta1-10345\lib\net45\Microsoft.Framework.ConfigurationModel.dll</HintPath>
