--- a/CycleSales/CycleSales.Tests/packages.config
+++ b/CycleSales/CycleSales.Tests/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EntityFramework" version="7.0.0-beta1-10961" targetFramework="net451" />
+  <package id="EntityFramework.InMemory" version="7.0.0-beta1-10961" targetFramework="net451" />
   <package id="Ix-Async" version="1.2.2-withwpa81" targetFramework="net451" />
   <package id="Microsoft.Bcl.Immutable" version="1.1.22-beta" targetFramework="net451" />
   <package id="Microsoft.Framework.ConfigurationModel" version="1.0.0-beta1-10345" targetFramework="net451" />
