--- a/UnicornClicker/UnicornClicker/UnicornClicker.Windows/UnicornClicker.Windows.csproj
+++ b/UnicornClicker/UnicornClicker/UnicornClicker.Windows/UnicornClicker.Windows.csproj
@@ -120,6 +120,7 @@
     <Content Include="Assets\SmallLogo.scale-100.png" />
     <Content Include="Assets\SplashScreen.scale-100.png" />
     <Content Include="Assets\StoreLogo.scale-100.png" />
+    <Content Include="Assets\Unicorn.png" />
   </ItemGroup>
   <ItemGroup>
     <Page Include="MainPage.xaml">
