--- a/UnicornClicker/UnicornClicker/UnicornClicker.WindowsPhone/UnicornClicker.WindowsPhone.csproj
+++ b/UnicornClicker/UnicornClicker/UnicornClicker.WindowsPhone/UnicornClicker.WindowsPhone.csproj
@@ -102,6 +102,7 @@
     <Content Include="Assets\SplashScreen.scale-240.png" />
     <Content Include="Assets\Square71x71Logo.scale-240.png" />
     <Content Include="Assets\StoreLogo.scale-240.png" />
+    <Content Include="Assets\Unicorn.png" />
     <Content Include="Assets\WideLogo.scale-240.png" />
   </ItemGroup>
   <ItemGroup>
