--- a/CompletedSource/CycleSales/CycleSales.MVC/CycleSales.MVC.csproj
+++ b/CompletedSource/CycleSales/CycleSales.MVC/CycleSales.MVC.csproj
@@ -41,37 +41,38 @@
   <ItemGroup>
     <Reference Include="EntityFramework, Version=7.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\EntityFramework.7.0.0-beta2-11514\lib\net45\EntityFramework.dll</HintPath>
+      <HintPath>..\packages\EntityFramework.7.0.0-beta1\lib\net45\EntityFramework.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Microsoft.Framework.ConfigurationModel, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Microsoft.Framework.ConfigurationModel.1.0.0-beta2-10510\lib\net45\Microsoft.Framework.ConfigurationModel.dll</HintPath>
+      <HintPath>..\packages\Microsoft.Framework.ConfigurationModel.1.0.0-beta1\lib\net45\Microsoft.Framework.ConfigurationModel.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Framework.DependencyInjection, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Microsoft.Framework.DependencyInjection.1.0.0-beta2-10527\lib\net45\Microsoft.Framework.DependencyInjection.dll</HintPath>
+      <HintPath>..\packages\Microsoft.Framework.DependencyInjection.1.0.0-beta1\lib\net45\Microsoft.Framework.DependencyInjection.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Framework.Logging, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Microsoft.Framework.Logging.1.0.0-beta2-10506\lib\net45\Microsoft.Framework.Logging.dll</HintPath>
+      <HintPath>..\packages\Microsoft.Framework.Logging.1.0.0-beta1\lib\net45\Microsoft.Framework.Logging.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Framework.Logging.Interfaces, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Microsoft.Framework.Logging.Interfaces.1.0.0-beta2-10506\lib\net45\Microsoft.Framework.Logging.Interfaces.dll</HintPath>
+      <HintPath>..\packages\Microsoft.Framework.Logging.Interfaces.1.0.0-beta1\lib\net45\Microsoft.Framework.Logging.Interfaces.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Framework.OptionsModel, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Microsoft.Framework.OptionsModel.1.0.0-beta2-10505\lib\net45\Microsoft.Framework.OptionsModel.dll</HintPath>
+      <HintPath>..\packages\Microsoft.Framework.OptionsModel.1.0.0-beta1\lib\net45\Microsoft.Framework.OptionsModel.dll</HintPath>
     </Reference>
-    <Reference Include="Remotion.Linq">
+    <Reference Include="Remotion.Linq, Version=1.15.15.0, Culture=neutral, PublicKeyToken=fee00910d6e5f53b, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Remotion.Linq.1.15.15.0\lib\portable-net45+wp80+wpa81+win\Remotion.Linq.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Collections" />
     <Reference Include="System.Collections.Concurrent" />
     <Reference Include="System.Collections.Immutable, Version=1.1.32.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
+      <Private>True</Private>
       <HintPath>..\packages\System.Collections.Immutable.1.1.32-beta\lib\portable-net45+win8+wp8+wpa81\System.Collections.Immutable.dll</HintPath>
     </Reference>
     <Reference Include="System.ComponentModel" />
@@ -166,6 +167,7 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\PriceController.cs" />
     <Compile Include="Controllers\BikesController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
@@ -214,6 +216,8 @@
     <Content Include="Views\Bikes\Index.cshtml" />
     <Content Include="Views\Bikes\Warranty.cshtml" />
     <Content Include="Views\Bikes\WarrantyLookup.cshtml" />
+    <Content Include="Views\Price\Index.cshtml" />
+    <Content Include="Views\Price\Convert.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
