--- a/StartingSource/CycleSales/CycleSales.Tests/packages.config
+++ b/StartingSource/CycleSales/CycleSales.Tests/packages.config
@@ -1,12 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="EntityFramework" version="7.0.0-beta2-11514" targetFramework="net451" />
+  <package id="EntityFramework" version="7.0.0-beta1" targetFramework="net451" />
+  <package id="EntityFramework.InMemory" version="7.0.0-beta1" targetFramework="net451" />
   <package id="Ix-Async" version="1.2.3-beta" targetFramework="net451" />
-  <package id="Microsoft.Framework.ConfigurationModel" version="1.0.0-beta2-10510" targetFramework="net451" />
-  <package id="Microsoft.Framework.DependencyInjection" version="1.0.0-beta2-10527" targetFramework="net451" />
-  <package id="Microsoft.Framework.Logging" version="1.0.0-beta2-10506" targetFramework="net451" />
-  <package id="Microsoft.Framework.Logging.Interfaces" version="1.0.0-beta2-10506" targetFramework="net451" />
-  <package id="Microsoft.Framework.OptionsModel" version="1.0.0-beta2-10505" targetFramework="net451" />
+  <package id="Microsoft.Framework.ConfigurationModel" version="1.0.0-beta1" targetFramework="net451" />
+  <package id="Microsoft.Framework.DependencyInjection" version="1.0.0-beta1" targetFramework="net451" />
+  <package id="Microsoft.Framework.Logging" version="1.0.0-beta1" targetFramework="net451" />
+  <package id="Microsoft.Framework.Logging.Interfaces" version="1.0.0-beta1" targetFramework="net451" />
+  <package id="Microsoft.Framework.OptionsModel" version="1.0.0-beta1" targetFramework="net451" />
   <package id="Remotion.Linq" version="1.15.15.0" targetFramework="net451" />
   <package id="System.Collections.Immutable" version="1.1.32-beta" targetFramework="net451" />
 </packages>
