--- a/StartingSource/CycleSales/CycleSales/CycleSales.csproj
+++ b/StartingSource/CycleSales/CycleSales/CycleSales.csproj
@@ -11,7 +11,7 @@
     <AssemblyName>CycleSales</AssemblyName>
     <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <NuGetPackageImportStamp>a51eb298</NuGetPackageImportStamp>
+    <NuGetPackageImportStamp>6e8ceab0</NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -31,20 +31,29 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="EntityFramework">
-      <HintPath>..\packages\EntityFramework.7.0.0-beta2-11514\lib\net45\EntityFramework.dll</HintPath>
+    <Reference Include="EntityFramework, Version=7.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\EntityFramework.7.0.0-beta1\lib\net45\EntityFramework.dll</HintPath>
     </Reference>
-    <Reference Include="EntityFramework.Commands">
-      <HintPath>..\packages\EntityFramework.Commands.7.0.0-beta2-11514\lib\net451\EntityFramework.Commands.dll</HintPath>
+    <Reference Include="EntityFramework.AzureTableStorage, Version=7.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\EntityFramework.AzureTableStorage.7.0.0-beta1\lib\net45\EntityFramework.AzureTableStorage.dll</HintPath>
     </Reference>
-    <Reference Include="EntityFramework.Migrations">
-      <HintPath>..\packages\EntityFramework.Migrations.7.0.0-beta2-11514\lib\net451\EntityFramework.Migrations.dll</HintPath>
+    <Reference Include="EntityFramework.Commands, Version=7.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\EntityFramework.Commands.7.0.0-beta1\lib\net451\EntityFramework.Commands.dll</HintPath>
     </Reference>
-    <Reference Include="EntityFramework.Relational">
-      <HintPath>..\packages\EntityFramework.Relational.7.0.0-beta2-11514\lib\net451\EntityFramework.Relational.dll</HintPath>
+    <Reference Include="EntityFramework.Migrations, Version=7.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\EntityFramework.Migrations.7.0.0-beta1\lib\net451\EntityFramework.Migrations.dll</HintPath>
     </Reference>
-    <Reference Include="EntityFramework.SqlServer">
-      <HintPath>..\packages\EntityFramework.SqlServer.7.0.0-beta2-11514\lib\net451\EntityFramework.SqlServer.dll</HintPath>
+    <Reference Include="EntityFramework.Relational, Version=7.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\EntityFramework.Relational.7.0.0-beta1\lib\net451\EntityFramework.Relational.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=7.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\EntityFramework.SqlServer.7.0.0-beta1\lib\net451\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Data.Edm, Version=5.6.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <Private>True</Private>
@@ -58,19 +67,24 @@
       <Private>True</Private>
       <HintPath>..\packages\Microsoft.Data.Services.Client.5.6.0\lib\net40\Microsoft.Data.Services.Client.dll</HintPath>
     </Reference>
-    <Reference Include="Microsoft.Framework.ConfigurationModel">
+    <Reference Include="Microsoft.Framework.ConfigurationModel, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Microsoft.Framework.ConfigurationModel.1.0.0-beta2-10510\lib\net45\Microsoft.Framework.ConfigurationModel.dll</HintPath>
     </Reference>
-    <Reference Include="Microsoft.Framework.DependencyInjection">
+    <Reference Include="Microsoft.Framework.DependencyInjection, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Microsoft.Framework.DependencyInjection.1.0.0-beta2-10527\lib\net45\Microsoft.Framework.DependencyInjection.dll</HintPath>
     </Reference>
-    <Reference Include="Microsoft.Framework.Logging">
+    <Reference Include="Microsoft.Framework.Logging, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Microsoft.Framework.Logging.1.0.0-beta2-10506\lib\net45\Microsoft.Framework.Logging.dll</HintPath>
     </Reference>
-    <Reference Include="Microsoft.Framework.Logging.Interfaces">
+    <Reference Include="Microsoft.Framework.Logging.Interfaces, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Microsoft.Framework.Logging.Interfaces.1.0.0-beta2-10506\lib\net45\Microsoft.Framework.Logging.Interfaces.dll</HintPath>
     </Reference>
-    <Reference Include="Microsoft.Framework.OptionsModel">
+    <Reference Include="Microsoft.Framework.OptionsModel, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Microsoft.Framework.OptionsModel.1.0.0-beta2-10505\lib\net45\Microsoft.Framework.OptionsModel.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.WindowsAzure.Configuration, Version=1.8.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
@@ -82,32 +96,37 @@
       <HintPath>..\packages\WindowsAzure.Storage.4.1.0\lib\net40\Microsoft.WindowsAzure.Storage.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=4.5.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.5.0.8\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Newtonsoft.Json.5.0.6\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
-    <Reference Include="Remotion.Linq">
+    <Reference Include="Remotion.Linq, Version=1.15.15.0, Culture=neutral, PublicKeyToken=fee00910d6e5f53b, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Remotion.Linq.1.15.15.0\lib\portable-net45+wp80+wpa81+win\Remotion.Linq.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Collections" />
     <Reference Include="System.Collections.Concurrent" />
     <Reference Include="System.Collections.Immutable, Version=1.1.32.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
+      <Private>True</Private>
       <HintPath>..\packages\System.Collections.Immutable.1.1.32-beta\lib\portable-net45+win8+wp8+wpa81\System.Collections.Immutable.dll</HintPath>
     </Reference>
     <Reference Include="System.ComponentModel" />
     <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Data.Common">
-      <HintPath>..\packages\System.Data.Common.1.0.0-beta2-10488\lib\net451\System.Data.Common.dll</HintPath>
+    <Reference Include="System.Data.Common, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\System.Data.Common.1.0.0-beta1\lib\net451\System.Data.Common.dll</HintPath>
     </Reference>
-    <Reference Include="System.Data.SqlClient">
-      <HintPath>..\packages\System.Data.SqlClient.1.0.0-beta2-10523\lib\net45\System.Data.SqlClient.dll</HintPath>
+    <Reference Include="System.Data.SqlClient, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\System.Data.SqlClient.1.0.0-beta1\lib\net45\System.Data.SqlClient.dll</HintPath>
     </Reference>
     <Reference Include="System.Diagnostics.Debug" />
     <Reference Include="System.Diagnostics.Tools" />
     <Reference Include="System.Dynamic.Runtime" />
     <Reference Include="System.Globalization" />
-    <Reference Include="System.Interactive.Async">
+    <Reference Include="System.Interactive.Async, Version=1.2.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Ix-Async.1.2.3-beta\lib\net45\System.Interactive.Async.dll</HintPath>
     </Reference>
     <Reference Include="System.Linq" />
@@ -137,7 +156,7 @@
     <Compile Include="CycleSalesModel\DatabaseBootstrapper.cs" />
     <Compile Include="CycleSalesModel\PriceService.cs" />
     <Compile Include="Migrations\201410242232584_InitialSchema.cs" />
-    <Compile Include="Migrations\201410242232584_InitialSchema.designer.cs">
+    <Compile Include="Migrations\201410242232584_InitialSchema.Designer.cs">
       <DependentUpon>201410242232584_InitialSchema.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\CycleSalesContextModelSnapshot.cs" />
@@ -146,15 +165,17 @@
     <Compile Include="WarrantyModel\WarrantyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
+    <None Include="packages.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="..\packages\EntityFramework.Commands.7.0.0-beta2-11514\build\portable-net451+win81+wpa81\EntityFramework.Commands.targets" Condition="Exists('..\packages\EntityFramework.Commands.7.0.0-beta2-11514\build\portable-net451+win81+wpa81\EntityFramework.Commands.targets')" />
+  <Import Project="..\packages\EntityFramework.Commands.7.0.0-beta1\build\portable-net451+win81+wpa81\EntityFramework.Commands.targets" Condition="Exists('..\packages\EntityFramework.Commands.7.0.0-beta1\build\portable-net451+win81+wpa81\EntityFramework.Commands.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Enable NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
-    <Error Condition="!Exists('..\packages\EntityFramework.Commands.7.0.0-beta2-11514\build\portable-net451+win81+wpa81\EntityFramework.Commands.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\EntityFramework.Commands.7.0.0-beta2-11514\build\portable-net451+win81+wpa81\EntityFramework.Commands.targets'))" />
+    <Error Condition="!Exists('..\packages\EntityFramework.Commands.7.0.0-beta1\build\portable-net451+win81+wpa81\EntityFramework.Commands.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\EntityFramework.Commands.7.0.0-beta1\build\portable-net451+win81+wpa81\EntityFramework.Commands.targets'))" />
   </Target>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
