--- a/StartingSource/UnicornClicker/UnicornClicker/UnicornClicker.WindowsPhone/UnicornClicker.WindowsPhone.csproj
+++ b/StartingSource/UnicornClicker/UnicornClicker/UnicornClicker.WindowsPhone/UnicornClicker.WindowsPhone.csproj
@@ -15,7 +15,7 @@
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{76F1466A-8B6D-4E39-A767-685A06062A39};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <SynthesizeLinkMetadata>true</SynthesizeLinkMetadata>
-    <NuGetPackageImportStamp>042562e5</NuGetPackageImportStamp>
+    <NuGetPackageImportStamp>da51ff71</NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>x86</PlatformTarget>
@@ -129,56 +129,41 @@
     </SDKReference>
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="EntityFramework, Version=7.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
+    <Reference Include="EntityFramework">
       <HintPath>..\..\packages\EntityFramework.7.0.0-beta2-11514\lib\portable-net451+win81+wpa81\EntityFramework.dll</HintPath>
     </Reference>
-    <Reference Include="EntityFramework.Migrations, Version=7.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
+    <Reference Include="EntityFramework.Migrations">
       <HintPath>..\..\packages\EntityFramework.Migrations.7.0.0-beta2-11514\lib\portable-net451+win81+wpa81\EntityFramework.Migrations.dll</HintPath>
     </Reference>
-    <Reference Include="EntityFramework.Relational, Version=7.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
+    <Reference Include="EntityFramework.Relational">
       <HintPath>..\..\packages\EntityFramework.Relational.7.0.0-beta2-11514\lib\portable-net451+win81+wpa81\EntityFramework.Relational.dll</HintPath>
     </Reference>
-    <Reference Include="Microsoft.Data.SQLite, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
+    <Reference Include="Microsoft.Data.SQLite">
       <HintPath>..\..\packages\Microsoft.Data.SQLite.1.0.0-beta2-10508\lib\portable-net451+win81+wpa81\Microsoft.Data.SQLite.dll</HintPath>
     </Reference>
-    <Reference Include="Microsoft.Framework.ConfigurationModel, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
+    <Reference Include="Microsoft.Framework.ConfigurationModel">
       <HintPath>..\..\packages\Microsoft.Framework.ConfigurationModel.1.0.0-beta2-10510\lib\portable-net451+win81+wpa81\Microsoft.Framework.ConfigurationModel.dll</HintPath>
     </Reference>
-    <Reference Include="Microsoft.Framework.ConfigurationModel.Shared, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\packages\Microsoft.Framework.ConfigurationModel.Shared.1.0.0-beta2-10510\lib\portable-net451+win81+wpa81\Microsoft.Framework.ConfigurationModel.Shared.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.Framework.DependencyInjection, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
+    <Reference Include="Microsoft.Framework.DependencyInjection">
       <HintPath>..\..\packages\Microsoft.Framework.DependencyInjection.1.0.0-beta2-10527\lib\portable-net451+win81+wpa81\Microsoft.Framework.DependencyInjection.dll</HintPath>
     </Reference>
-    <Reference Include="Microsoft.Framework.Logging, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
+    <Reference Include="Microsoft.Framework.Logging">
       <HintPath>..\..\packages\Microsoft.Framework.Logging.1.0.0-beta2-10506\lib\portable-net451+win81+wpa81\Microsoft.Framework.Logging.dll</HintPath>
     </Reference>
-    <Reference Include="Microsoft.Framework.Logging.Interfaces, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
+    <Reference Include="Microsoft.Framework.Logging.Interfaces">
       <HintPath>..\..\packages\Microsoft.Framework.Logging.Interfaces.1.0.0-beta2-10506\lib\portable-net451+win81+wpa81\Microsoft.Framework.Logging.Interfaces.dll</HintPath>
     </Reference>
-    <Reference Include="Microsoft.Framework.OptionsModel, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
+    <Reference Include="Microsoft.Framework.OptionsModel">
       <HintPath>..\..\packages\Microsoft.Framework.OptionsModel.1.0.0-beta2-10505\lib\portable-net451+win81+wpa81\Microsoft.Framework.OptionsModel.dll</HintPath>
     </Reference>
-    <Reference Include="Remotion.Linq, Version=1.15.15.0, Culture=neutral, PublicKeyToken=fee00910d6e5f53b, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
+    <Reference Include="Remotion.Linq">
       <HintPath>..\..\packages\Remotion.Linq.1.15.15.0\lib\portable-net45+wp80+wpa81+win\Remotion.Linq.dll</HintPath>
     </Reference>
     <Reference Include="System.Collections.Immutable">
       <HintPath>..\..\packages\System.Collections.Immutable.1.1.32-beta\lib\portable-net45+win8+wp8+wpa81\System.Collections.Immutable.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="System.Data.Common, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
+    <Reference Include="System.Data.Common">
       <HintPath>..\..\packages\System.Data.Common.1.0.0-beta2-10488\lib\portable-net451+win81+wpa81\System.Data.Common.dll</HintPath>
     </Reference>
     <Reference Include="System.Interactive.Async">
